--- a/amorkLib/vue_library/src/assets/css/global.css
+++ b/amorkLib/vue_library/src/assets/css/global.css
@@ -22,6 +22,7 @@ body,
 .el-table {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-top: 15px;
+  font-size: 12px !important;
 }
 .el-select {
   width: 100px;
